...
                android:id="@+id/analog"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ADD NEW"
                android:id="@+id/add"
                android:background="#41D2E4"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Stat"
                android:id="@+id/stat"
                android:layout_marginTop="20dp"
                android:background="#41D2E4"
                />


            <LinearLayout
...
