...
            <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/back"
            android:backgroundTint="#43D8EC"
            android:id="@+id/up"
            android:text="Save"
            />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
